FreeST/src/Parse/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.8 from FreeST/src/Parse/Parser.y
-----------------------------------------------------------------------------

state 79 contains 3 shift/reduce conflicts.
state 152 contains 3 shift/reduce conflicts.

terminal Lambda is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_types -> Type                               (0)
	%start_typeScheme -> TypeScheme                    (1)
	%start_terms -> Prog                               (2)
	%start_kinds -> Kind                               (3)
	%start_expr -> Expr                                (4)
	%start_schemes -> Schemes                          (5)
	Prog -> Decl                                       (6)
	Prog -> Decl NL Prog                               (7)
	NL -> nl NL                                        (8)
	NL -> nl                                           (9)
	Decl -> ProgVar ':' TypeScheme                     (10)
	Decl -> ProgVar ProgVarWildSeq '=' Expr            (11)
	Decl -> type TypeNameKind KindBindEmptyList '=' Type   (12)
	Decl -> data TypeNameKind KindBindEmptyList '=' DataCons   (13)
	DataCons -> DataCon                                (14)
	DataCons -> DataCon '|' DataCons                   (15)
	DataCon -> Constructor TypeSeq                     (16)
	Expr -> Expr '$' Expr                              (17)
	Expr -> let ProgVarWild '=' Expr in Expr           (18)
	Expr -> Expr ';' Expr                              (19)
	Expr -> let '(' ProgVarWildList ')' '=' Expr in Expr   (20)
	Expr -> if Expr then Expr else Expr                (21)
	Expr -> new Type                                   (22)
	Expr -> match Expr with '{' MatchMap '}'           (23)
	Expr -> case Expr of '{' CaseMap '}'               (24)
	Expr -> Expr '||' Expr                             (25)
	Expr -> Expr '&&' Expr                             (26)
	Expr -> Expr CMP Expr                              (27)
	Expr -> Expr '+' Expr                              (28)
	Expr -> Expr '-' Expr                              (29)
	Expr -> Expr '*' Expr                              (30)
	Expr -> Expr '/' Expr                              (31)
	Expr -> App                                        (32)
	App -> App Primary                                 (33)
	App -> select ArbitraryProgVar                     (34)
	App -> '-' App                                     (35)
	App -> Primary                                     (36)
	Primary -> INT                                     (37)
	Primary -> BOOL                                    (38)
	Primary -> CHAR                                    (39)
	Primary -> '()'                                    (40)
	Primary -> ProgVar '[' TypeList ']'                (41)
	Primary -> ArbitraryProgVar                        (42)
	Primary -> '(' lambda LambdaProgVarWildTBindList Arrow Expr ')'   (43)
	Primary -> '(' Tuple ')'                           (44)
	ProgVarWildTBind -> ProgVarWild ':' Type           (45)
	LambdaProgVarWildTBindList -> ProgVarWildTBind     (46)
	LambdaProgVarWildTBindList -> ProgVarWildTBind LambdaProgVarWildTBindList   (47)
	ProgVarWildList -> ProgVarWild ',' ProgVarWildList   (48)
	ProgVarWildList -> ProgVarWild ',' ProgVarWild     (49)
	Tuple -> Expr                                      (50)
	Tuple -> Expr ',' Tuple                            (51)
	MatchMap -> Match                                  (52)
	MatchMap -> Match ',' MatchMap                     (53)
	Match -> ArbitraryProgVar ProgVarWild '->' Expr    (54)
	CaseMap -> Case                                    (55)
	CaseMap -> Case ',' CaseMap                        (56)
	Case -> Constructor ProgVarWildSeq '->' Expr       (57)
	TypeScheme -> forall KindBindList '=>' Type        (58)
	TypeScheme -> Type                                 (59)
	Type -> BasicType                                  (60)
	Type -> Type Arrow Type                            (61)
	Type -> '(' TupleType ')'                          (62)
	Type -> Skip                                       (63)
	Type -> Type ';' Type                              (64)
	Type -> Polarity BasicType                         (65)
	Type -> ChoiceView '{' FieldList '}'               (66)
	Type -> rec KindBind '.' Type                      (67)
	Type -> TypeVar                                    (68)
	Type -> dualof Type                                (69)
	Type -> TypeName                                   (70)
	BasicType -> Int                                   (71)
	BasicType -> Char                                  (72)
	BasicType -> Bool                                  (73)
	BasicType -> '()'                                  (74)
	TupleType -> Type                                  (75)
	TupleType -> Type ',' TupleType                    (76)
	Polarity -> '?'                                    (77)
	Polarity -> '!'                                    (78)
	Arrow -> '->'                                      (79)
	Arrow -> '-o'                                      (80)
	ChoiceView -> '+'                                  (81)
	ChoiceView -> '&'                                  (82)
	FieldList -> Field                                 (83)
	FieldList -> Field ',' FieldList                   (84)
	Field -> ArbitraryProgVar ':' Type                 (85)
	TypeList -> Type                                   (86)
	TypeList -> Type ',' TypeList                      (87)
	TypeSeq ->                                         (88)
	TypeSeq -> Type TypeSeq                            (89)
	Kind -> SU                                         (90)
	Kind -> SL                                         (91)
	Kind -> TU                                         (92)
	Kind -> TL                                         (93)
	ArbitraryProgVar -> ProgVar                        (94)
	ArbitraryProgVar -> Constructor                    (95)
	ProgVar -> LOWER_ID                                (96)
	Constructor -> UPPER_ID                            (97)
	ProgVarWild -> ProgVar                             (98)
	ProgVarWild -> '_'                                 (99)
	ProgVarWildSeq ->                                  (100)
	ProgVarWildSeq -> ProgVarWild ProgVarWildSeq       (101)
	TypeVar -> LOWER_ID                                (102)
	TypeName -> UPPER_ID                               (103)
	KindBind -> TypeVar ':' Kind                       (104)
	KindBind -> TypeVar                                (105)
	TypeNameKind -> TypeName ':' Kind                  (106)
	TypeNameKind -> TypeName                           (107)
	KindBindList -> KindBind                           (108)
	KindBindList -> KindBind ',' KindBindList          (109)
	KindBindEmptyList ->                               (110)
	KindBindEmptyList -> KindBindList                  (111)
	Schemes -> TypeScheme NL TypeScheme                (112)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	nl             { TokenNL _ }
	Int            { TokenIntT _ }
	Char           { TokenCharT _ }
	Bool           { TokenBoolT _ }
	'()'           { TokenUnit _ }
	'->'           { TokenUnArrow _ }
	'-o'           { TokenLinArrow _ }
	lambda         { TokenLambda _ }
	Lambda         { TokenUpperLambda _ }
	Skip           { TokenSkip _ }
	'('            { TokenLParen _ }
	')'            { TokenRParen _ }
	','            { TokenComma _ }
	'['            { TokenLBracket _ }
	']'            { TokenRBracket _ }
	':'            { TokenColon _ }
	';'            { TokenSemi _ }
	'!'            { TokenMOut _ }
	'?'            { TokenMIn _ }
	'{'            { TokenLBrace _ }
	'}'            { TokenRBrace _ }
	'=>'           { TokenFArrow _ }
	'&&'           { TokenConjunction _ }
	'||'           { TokenDisjunction _ }
	'/'            { TokenDiv _ }
	'&'            { TokenAmpersand _ }
	'+'            { TokenPlus _ }
	'-'            { TokenMinus _ }
	'*'            { TokenTimes _ }
	'_'            { TokenWild _ }
	'$'            { TokenDollar _ }
	'.'            { TokenDot _ }
	CMP            { TokenCmp _ _ }
	UPPER_ID       { TokenUpperId _ _ }
	LOWER_ID       { TokenLowerId _ _ }
	rec            { TokenRec _ }
	SU             { TokenSU _ }
	SL             { TokenSL _ }
	TU             { TokenTU _ }
	TL             { TokenTL _ }
	INT            { TokenInt _ _ }
	BOOL           { TokenBool _ _ }
	CHAR           { TokenChar _ _ }
	let            { TokenLet _ }
	in             { TokenIn _ }
	'='            { TokenEq _ }
	data           { TokenData _ }
	type           { TokenType _ }
	'|'            { TokenPipe _ }
	if             { TokenIf _ }
	then           { TokenThen _ }
	else           { TokenElse _ }
	new            { TokenNew _ }
	select         { TokenSelect _ }
	match          { TokenMatch _ }
	with           { TokenWith _ }
	case           { TokenCase _ }
	of             { TokenOf _ }
	forall         { TokenForall _ }
	dualof         { TokenDualof _ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_types    rule  0
	%start_typeScheme rule  1
	%start_terms    rule  2
	%start_kinds    rule  3
	%start_expr     rule  4
	%start_schemes  rule  5
	Prog            rules 6, 7
	NL              rules 8, 9
	Decl            rules 10, 11, 12, 13
	DataCons        rules 14, 15
	DataCon         rule  16
	Expr            rules 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32
	App             rules 33, 34, 35, 36
	Primary         rules 37, 38, 39, 40, 41, 42, 43, 44
	ProgVarWildTBind rule  45
	LambdaProgVarWildTBindList rules 46, 47
	ProgVarWildList rules 48, 49
	Tuple           rules 50, 51
	MatchMap        rules 52, 53
	Match           rule  54
	CaseMap         rules 55, 56
	Case            rule  57
	TypeScheme      rules 58, 59
	Type            rules 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70
	BasicType       rules 71, 72, 73, 74
	TupleType       rules 75, 76
	Polarity        rules 77, 78
	Arrow           rules 79, 80
	ChoiceView      rules 81, 82
	FieldList       rules 83, 84
	Field           rule  85
	TypeList        rules 86, 87
	TypeSeq         rules 88, 89
	Kind            rules 90, 91, 92, 93
	ArbitraryProgVar rules 94, 95
	ProgVar         rule  96
	Constructor     rule  97
	ProgVarWild     rules 98, 99
	ProgVarWildSeq  rules 100, 101
	TypeVar         rule  102
	TypeName        rule  103
	KindBind        rules 104, 105
	TypeNameKind    rules 106, 107
	KindBindList    rules 108, 109
	KindBindEmptyList rules 110, 111
	Schemes         rule  112

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	Int            shift, and enter state 20
	Char           shift, and enter state 21
	Bool           shift, and enter state 22
	'()'           shift, and enter state 23
	Skip           shift, and enter state 24
	'('            shift, and enter state 25
	'!'            shift, and enter state 26
	'?'            shift, and enter state 27
	'&'            shift, and enter state 28
	'+'            shift, and enter state 29
	UPPER_ID       shift, and enter state 30
	LOWER_ID       shift, and enter state 31
	rec            shift, and enter state 32
	dualof         shift, and enter state 34

	Type           goto state 62
	BasicType      goto state 14
	Polarity       goto state 15
	ChoiceView     goto state 16
	TypeVar        goto state 17
	TypeName       goto state 18

State 1


	Int            shift, and enter state 20
	Char           shift, and enter state 21
	Bool           shift, and enter state 22
	'()'           shift, and enter state 23
	Skip           shift, and enter state 24
	'('            shift, and enter state 25
	'!'            shift, and enter state 26
	'?'            shift, and enter state 27
	'&'            shift, and enter state 28
	'+'            shift, and enter state 29
	UPPER_ID       shift, and enter state 30
	LOWER_ID       shift, and enter state 31
	rec            shift, and enter state 32
	forall         shift, and enter state 33
	dualof         shift, and enter state 34

	TypeScheme     goto state 61
	Type           goto state 13
	BasicType      goto state 14
	Polarity       goto state 15
	ChoiceView     goto state 16
	TypeVar        goto state 17
	TypeName       goto state 18

State 2


	LOWER_ID       shift, and enter state 9
	data           shift, and enter state 10
	type           shift, and enter state 11

	Prog           goto state 59
	Decl           goto state 60
	ProgVar        goto state 8

State 3


	SU             shift, and enter state 55
	SL             shift, and enter state 56
	TU             shift, and enter state 57
	TL             shift, and enter state 58

	Kind           goto state 54

State 4


	'()'           shift, and enter state 41
	'('            shift, and enter state 42
	'-'            shift, and enter state 43
	UPPER_ID       shift, and enter state 44
	LOWER_ID       shift, and enter state 9
	INT            shift, and enter state 45
	BOOL           shift, and enter state 46
	CHAR           shift, and enter state 47
	let            shift, and enter state 48
	if             shift, and enter state 49
	new            shift, and enter state 50
	select         shift, and enter state 51
	match          shift, and enter state 52
	case           shift, and enter state 53

	Expr           goto state 35
	App            goto state 36
	Primary        goto state 37
	ArbitraryProgVargoto state 38
	ProgVar        goto state 39
	Constructor    goto state 40

State 5


	Int            shift, and enter state 20
	Char           shift, and enter state 21
	Bool           shift, and enter state 22
	'()'           shift, and enter state 23
	Skip           shift, and enter state 24
	'('            shift, and enter state 25
	'!'            shift, and enter state 26
	'?'            shift, and enter state 27
	'&'            shift, and enter state 28
	'+'            shift, and enter state 29
	UPPER_ID       shift, and enter state 30
	LOWER_ID       shift, and enter state 31
	rec            shift, and enter state 32
	forall         shift, and enter state 33
	dualof         shift, and enter state 34

	TypeScheme     goto state 12
	Type           goto state 13
	BasicType      goto state 14
	Polarity       goto state 15
	ChoiceView     goto state 16
	TypeVar        goto state 17
	TypeName       goto state 18
	Schemes        goto state 19

State 6


	LOWER_ID       shift, and enter state 9
	data           shift, and enter state 10
	type           shift, and enter state 11

	Decl           goto state 7
	ProgVar        goto state 8

State 7

	Prog -> Decl .                                      (rule 6)



State 8

	Decl -> ProgVar . ':' TypeScheme                    (rule 10)
	Decl -> ProgVar . ProgVarWildSeq '=' Expr           (rule 11)

	':'            shift, and enter state 109
	'_'            shift, and enter state 78
	LOWER_ID       shift, and enter state 9
	'='            reduce using rule 100

	ProgVar        goto state 75
	ProgVarWild    goto state 107
	ProgVarWildSeq goto state 108

State 9

	ProgVar -> LOWER_ID .                               (rule 96)

	nl             reduce using rule 96
	'()'           reduce using rule 96
	'->'           reduce using rule 96
	'('            reduce using rule 96
	')'            reduce using rule 96
	','            reduce using rule 96
	'['            reduce using rule 96
	':'            reduce using rule 96
	';'            reduce using rule 96
	'}'            reduce using rule 96
	'&&'           reduce using rule 96
	'||'           reduce using rule 96
	'/'            reduce using rule 96
	'+'            reduce using rule 96
	'-'            reduce using rule 96
	'*'            reduce using rule 96
	'_'            reduce using rule 96
	'$'            reduce using rule 96
	CMP            reduce using rule 96
	UPPER_ID       reduce using rule 96
	LOWER_ID       reduce using rule 96
	INT            reduce using rule 96
	BOOL           reduce using rule 96
	CHAR           reduce using rule 96
	in             reduce using rule 96
	'='            reduce using rule 96
	then           reduce using rule 96
	else           reduce using rule 96
	with           reduce using rule 96
	of             reduce using rule 96
	%eof           reduce using rule 96


State 10

	Decl -> data . TypeNameKind KindBindEmptyList '=' DataCons    (rule 13)

	UPPER_ID       shift, and enter state 30

	TypeName       goto state 104
	TypeNameKind   goto state 106

State 11

	Decl -> type . TypeNameKind KindBindEmptyList '=' Type    (rule 12)

	UPPER_ID       shift, and enter state 30

	TypeName       goto state 104
	TypeNameKind   goto state 105

State 12

	Schemes -> TypeScheme . NL TypeScheme               (rule 112)

	nl             shift, and enter state 68

	NL             goto state 103

State 13

	TypeScheme -> Type .                                (rule 59)
	Type -> Type . Arrow Type                           (rule 61)
	Type -> Type . ';' Type                             (rule 64)

	nl             reduce using rule 59
	'->'           shift, and enter state 64
	'-o'           shift, and enter state 65
	';'            shift, and enter state 66
	%eof           reduce using rule 59

	Arrow          goto state 63

State 14

	Type -> BasicType .                                 (rule 60)

	nl             reduce using rule 60
	Int            reduce using rule 60
	Char           reduce using rule 60
	Bool           reduce using rule 60
	'()'           reduce using rule 60
	'->'           reduce using rule 60
	'-o'           reduce using rule 60
	Skip           reduce using rule 60
	'('            reduce using rule 60
	')'            reduce using rule 60
	','            reduce using rule 60
	']'            reduce using rule 60
	';'            reduce using rule 60
	'!'            reduce using rule 60
	'?'            reduce using rule 60
	'}'            reduce using rule 60
	'&&'           reduce using rule 60
	'||'           reduce using rule 60
	'/'            reduce using rule 60
	'&'            reduce using rule 60
	'+'            reduce using rule 60
	'-'            reduce using rule 60
	'*'            reduce using rule 60
	'_'            reduce using rule 60
	'$'            reduce using rule 60
	CMP            reduce using rule 60
	UPPER_ID       reduce using rule 60
	LOWER_ID       reduce using rule 60
	rec            reduce using rule 60
	in             reduce using rule 60
	'|'            reduce using rule 60
	then           reduce using rule 60
	else           reduce using rule 60
	with           reduce using rule 60
	of             reduce using rule 60
	dualof         reduce using rule 60
	%eof           reduce using rule 60


State 15

	Type -> Polarity . BasicType                        (rule 65)

	Int            shift, and enter state 20
	Char           shift, and enter state 21
	Bool           shift, and enter state 22
	'()'           shift, and enter state 23

	BasicType      goto state 102

State 16

	Type -> ChoiceView . '{' FieldList '}'              (rule 66)

	'{'            shift, and enter state 101


State 17

	Type -> TypeVar .                                   (rule 68)

	nl             reduce using rule 68
	Int            reduce using rule 68
	Char           reduce using rule 68
	Bool           reduce using rule 68
	'()'           reduce using rule 68
	'->'           reduce using rule 68
	'-o'           reduce using rule 68
	Skip           reduce using rule 68
	'('            reduce using rule 68
	')'            reduce using rule 68
	','            reduce using rule 68
	']'            reduce using rule 68
	';'            reduce using rule 68
	'!'            reduce using rule 68
	'?'            reduce using rule 68
	'}'            reduce using rule 68
	'&&'           reduce using rule 68
	'||'           reduce using rule 68
	'/'            reduce using rule 68
	'&'            reduce using rule 68
	'+'            reduce using rule 68
	'-'            reduce using rule 68
	'*'            reduce using rule 68
	'_'            reduce using rule 68
	'$'            reduce using rule 68
	CMP            reduce using rule 68
	UPPER_ID       reduce using rule 68
	LOWER_ID       reduce using rule 68
	rec            reduce using rule 68
	in             reduce using rule 68
	'|'            reduce using rule 68
	then           reduce using rule 68
	else           reduce using rule 68
	with           reduce using rule 68
	of             reduce using rule 68
	dualof         reduce using rule 68
	%eof           reduce using rule 68


State 18

	Type -> TypeName .                                  (rule 70)

	nl             reduce using rule 70
	Int            reduce using rule 70
	Char           reduce using rule 70
	Bool           reduce using rule 70
	'()'           reduce using rule 70
	'->'           reduce using rule 70
	'-o'           reduce using rule 70
	Skip           reduce using rule 70
	'('            reduce using rule 70
	')'            reduce using rule 70
	','            reduce using rule 70
	']'            reduce using rule 70
	';'            reduce using rule 70
	'!'            reduce using rule 70
	'?'            reduce using rule 70
	'}'            reduce using rule 70
	'&&'           reduce using rule 70
	'||'           reduce using rule 70
	'/'            reduce using rule 70
	'&'            reduce using rule 70
	'+'            reduce using rule 70
	'-'            reduce using rule 70
	'*'            reduce using rule 70
	'_'            reduce using rule 70
	'$'            reduce using rule 70
	CMP            reduce using rule 70
	UPPER_ID       reduce using rule 70
	LOWER_ID       reduce using rule 70
	rec            reduce using rule 70
	in             reduce using rule 70
	'|'            reduce using rule 70
	then           reduce using rule 70
	else           reduce using rule 70
	with           reduce using rule 70
	of             reduce using rule 70
	dualof         reduce using rule 70
	%eof           reduce using rule 70


State 19

	%start_schemes -> Schemes .                         (rule 5)

	%eof           accept


State 20

	BasicType -> Int .                                  (rule 71)

	nl             reduce using rule 71
	Int            reduce using rule 71
	Char           reduce using rule 71
	Bool           reduce using rule 71
	'()'           reduce using rule 71
	'->'           reduce using rule 71
	'-o'           reduce using rule 71
	Skip           reduce using rule 71
	'('            reduce using rule 71
	')'            reduce using rule 71
	','            reduce using rule 71
	']'            reduce using rule 71
	';'            reduce using rule 71
	'!'            reduce using rule 71
	'?'            reduce using rule 71
	'}'            reduce using rule 71
	'&&'           reduce using rule 71
	'||'           reduce using rule 71
	'/'            reduce using rule 71
	'&'            reduce using rule 71
	'+'            reduce using rule 71
	'-'            reduce using rule 71
	'*'            reduce using rule 71
	'_'            reduce using rule 71
	'$'            reduce using rule 71
	CMP            reduce using rule 71
	UPPER_ID       reduce using rule 71
	LOWER_ID       reduce using rule 71
	rec            reduce using rule 71
	in             reduce using rule 71
	'|'            reduce using rule 71
	then           reduce using rule 71
	else           reduce using rule 71
	with           reduce using rule 71
	of             reduce using rule 71
	dualof         reduce using rule 71
	%eof           reduce using rule 71


State 21

	BasicType -> Char .                                 (rule 72)

	nl             reduce using rule 72
	Int            reduce using rule 72
	Char           reduce using rule 72
	Bool           reduce using rule 72
	'()'           reduce using rule 72
	'->'           reduce using rule 72
	'-o'           reduce using rule 72
	Skip           reduce using rule 72
	'('            reduce using rule 72
	')'            reduce using rule 72
	','            reduce using rule 72
	']'            reduce using rule 72
	';'            reduce using rule 72
	'!'            reduce using rule 72
	'?'            reduce using rule 72
	'}'            reduce using rule 72
	'&&'           reduce using rule 72
	'||'           reduce using rule 72
	'/'            reduce using rule 72
	'&'            reduce using rule 72
	'+'            reduce using rule 72
	'-'            reduce using rule 72
	'*'            reduce using rule 72
	'_'            reduce using rule 72
	'$'            reduce using rule 72
	CMP            reduce using rule 72
	UPPER_ID       reduce using rule 72
	LOWER_ID       reduce using rule 72
	rec            reduce using rule 72
	in             reduce using rule 72
	'|'            reduce using rule 72
	then           reduce using rule 72
	else           reduce using rule 72
	with           reduce using rule 72
	of             reduce using rule 72
	dualof         reduce using rule 72
	%eof           reduce using rule 72


State 22

	BasicType -> Bool .                                 (rule 73)

	nl             reduce using rule 73
	Int            reduce using rule 73
	Char           reduce using rule 73
	Bool           reduce using rule 73
	'()'           reduce using rule 73
	'->'           reduce using rule 73
	'-o'           reduce using rule 73
	Skip           reduce using rule 73
	'('            reduce using rule 73
	')'            reduce using rule 73
	','            reduce using rule 73
	']'            reduce using rule 73
	';'            reduce using rule 73
	'!'            reduce using rule 73
	'?'            reduce using rule 73
	'}'            reduce using rule 73
	'&&'           reduce using rule 73
	'||'           reduce using rule 73
	'/'            reduce using rule 73
	'&'            reduce using rule 73
	'+'            reduce using rule 73
	'-'            reduce using rule 73
	'*'            reduce using rule 73
	'_'            reduce using rule 73
	'$'            reduce using rule 73
	CMP            reduce using rule 73
	UPPER_ID       reduce using rule 73
	LOWER_ID       reduce using rule 73
	rec            reduce using rule 73
	in             reduce using rule 73
	'|'            reduce using rule 73
	then           reduce using rule 73
	else           reduce using rule 73
	with           reduce using rule 73
	of             reduce using rule 73
	dualof         reduce using rule 73
	%eof           reduce using rule 73


State 23

	BasicType -> '()' .                                 (rule 74)

	nl             reduce using rule 74
	Int            reduce using rule 74
	Char           reduce using rule 74
	Bool           reduce using rule 74
	'()'           reduce using rule 74
	'->'           reduce using rule 74
	'-o'           reduce using rule 74
	Skip           reduce using rule 74
	'('            reduce using rule 74
	')'            reduce using rule 74
	','            reduce using rule 74
	']'            reduce using rule 74
	';'            reduce using rule 74
	'!'            reduce using rule 74
	'?'            reduce using rule 74
	'}'            reduce using rule 74
	'&&'           reduce using rule 74
	'||'           reduce using rule 74
	'/'            reduce using rule 74
	'&'            reduce using rule 74
	'+'            reduce using rule 74
	'-'            reduce using rule 74
	'*'            reduce using rule 74
	'_'            reduce using rule 74
	'$'            reduce using rule 74
	CMP            reduce using rule 74
	UPPER_ID       reduce using rule 74
	LOWER_ID       reduce using rule 74
	rec            reduce using rule 74
	in             reduce using rule 74
	'|'            reduce using rule 74
	then           reduce using rule 74
	else           reduce using rule 74
	with           reduce using rule 74
	of             reduce using rule 74
	dualof         reduce using rule 74
	%eof           reduce using rule 74


State 24

	Type -> Skip .                                      (rule 63)

	nl             reduce using rule 63
	Int            reduce using rule 63
	Char           reduce using rule 63
	Bool           reduce using rule 63
	'()'           reduce using rule 63
	'->'           reduce using rule 63
	'-o'           reduce using rule 63
	Skip           reduce using rule 63
	'('            reduce using rule 63
	')'            reduce using rule 63
	','            reduce using rule 63
	']'            reduce using rule 63
	';'            reduce using rule 63
	'!'            reduce using rule 63
	'?'            reduce using rule 63
	'}'            reduce using rule 63
	'&&'           reduce using rule 63
	'||'           reduce using rule 63
	'/'            reduce using rule 63
	'&'            reduce using rule 63
	'+'            reduce using rule 63
	'-'            reduce using rule 63
	'*'            reduce using rule 63
	'_'            reduce using rule 63
	'$'            reduce using rule 63
	CMP            reduce using rule 63
	UPPER_ID       reduce using rule 63
	LOWER_ID       reduce using rule 63
	rec            reduce using rule 63
	in             reduce using rule 63
	'|'            reduce using rule 63
	then           reduce using rule 63
	else           reduce using rule 63
	with           reduce using rule 63
	of             reduce using rule 63
	dualof         reduce using rule 63
	%eof           reduce using rule 63


State 25

	Type -> '(' . TupleType ')'                         (rule 62)

	Int            shift, and enter state 20
	Char           shift, and enter state 21
	Bool           shift, and enter state 22
	'()'           shift, and enter state 23
	Skip           shift, and enter state 24
	'('            shift, and enter state 25
	'!'            shift, and enter state 26
	'?'            shift, and enter state 27
	'&'            shift, and enter state 28
	'+'            shift, and enter state 29
	UPPER_ID       shift, and enter state 30
	LOWER_ID       shift, and enter state 31
	rec            shift, and enter state 32
	dualof         shift, and enter state 34

	Type           goto state 99
	BasicType      goto state 14
	TupleType      goto state 100
	Polarity       goto state 15
	ChoiceView     goto state 16
	TypeVar        goto state 17
	TypeName       goto state 18

State 26

	Polarity -> '!' .                                   (rule 78)

	Int            reduce using rule 78
	Char           reduce using rule 78
	Bool           reduce using rule 78
	'()'           reduce using rule 78


State 27

	Polarity -> '?' .                                   (rule 77)

	Int            reduce using rule 77
	Char           reduce using rule 77
	Bool           reduce using rule 77
	'()'           reduce using rule 77


State 28

	ChoiceView -> '&' .                                 (rule 82)

	'{'            reduce using rule 82


State 29

	ChoiceView -> '+' .                                 (rule 81)

	'{'            reduce using rule 81


State 30

	TypeName -> UPPER_ID .                              (rule 103)

	nl             reduce using rule 103
	Int            reduce using rule 103
	Char           reduce using rule 103
	Bool           reduce using rule 103
	'()'           reduce using rule 103
	'->'           reduce using rule 103
	'-o'           reduce using rule 103
	Skip           reduce using rule 103
	'('            reduce using rule 103
	')'            reduce using rule 103
	','            reduce using rule 103
	']'            reduce using rule 103
	':'            reduce using rule 103
	';'            reduce using rule 103
	'!'            reduce using rule 103
	'?'            reduce using rule 103
	'}'            reduce using rule 103
	'&&'           reduce using rule 103
	'||'           reduce using rule 103
	'/'            reduce using rule 103
	'&'            reduce using rule 103
	'+'            reduce using rule 103
	'-'            reduce using rule 103
	'*'            reduce using rule 103
	'_'            reduce using rule 103
	'$'            reduce using rule 103
	CMP            reduce using rule 103
	UPPER_ID       reduce using rule 103
	LOWER_ID       reduce using rule 103
	rec            reduce using rule 103
	in             reduce using rule 103
	'='            reduce using rule 103
	'|'            reduce using rule 103
	then           reduce using rule 103
	else           reduce using rule 103
	with           reduce using rule 103
	of             reduce using rule 103
	dualof         reduce using rule 103
	%eof           reduce using rule 103


State 31

	TypeVar -> LOWER_ID .                               (rule 102)

	nl             reduce using rule 102
	Int            reduce using rule 102
	Char           reduce using rule 102
	Bool           reduce using rule 102
	'()'           reduce using rule 102
	'->'           reduce using rule 102
	'-o'           reduce using rule 102
	Skip           reduce using rule 102
	'('            reduce using rule 102
	')'            reduce using rule 102
	','            reduce using rule 102
	']'            reduce using rule 102
	':'            reduce using rule 102
	';'            reduce using rule 102
	'!'            reduce using rule 102
	'?'            reduce using rule 102
	'}'            reduce using rule 102
	'=>'           reduce using rule 102
	'&&'           reduce using rule 102
	'||'           reduce using rule 102
	'/'            reduce using rule 102
	'&'            reduce using rule 102
	'+'            reduce using rule 102
	'-'            reduce using rule 102
	'*'            reduce using rule 102
	'_'            reduce using rule 102
	'$'            reduce using rule 102
	'.'            reduce using rule 102
	CMP            reduce using rule 102
	UPPER_ID       reduce using rule 102
	LOWER_ID       reduce using rule 102
	rec            reduce using rule 102
	in             reduce using rule 102
	'='            reduce using rule 102
	'|'            reduce using rule 102
	then           reduce using rule 102
	else           reduce using rule 102
	with           reduce using rule 102
	of             reduce using rule 102
	dualof         reduce using rule 102
	%eof           reduce using rule 102


State 32

	Type -> rec . KindBind '.' Type                     (rule 67)

	LOWER_ID       shift, and enter state 31

	TypeVar        goto state 95
	KindBind       goto state 98

State 33

	TypeScheme -> forall . KindBindList '=>' Type       (rule 58)

	LOWER_ID       shift, and enter state 31

	TypeVar        goto state 95
	KindBind       goto state 96
	KindBindList   goto state 97

State 34

	Type -> dualof . Type                               (rule 69)

	Int            shift, and enter state 20
	Char           shift, and enter state 21
	Bool           shift, and enter state 22
	'()'           shift, and enter state 23
	Skip           shift, and enter state 24
	'('            shift, and enter state 25
	'!'            shift, and enter state 26
	'?'            shift, and enter state 27
	'&'            shift, and enter state 28
	'+'            shift, and enter state 29
	UPPER_ID       shift, and enter state 30
	LOWER_ID       shift, and enter state 31
	rec            shift, and enter state 32
	dualof         shift, and enter state 34

	Type           goto state 94
	BasicType      goto state 14
	Polarity       goto state 15
	ChoiceView     goto state 16
	TypeVar        goto state 17
	TypeName       goto state 18

State 35

	%start_expr -> Expr .                               (rule 4)
	Expr -> Expr . '$' Expr                             (rule 17)
	Expr -> Expr . ';' Expr                             (rule 19)
	Expr -> Expr . '||' Expr                            (rule 25)
	Expr -> Expr . '&&' Expr                            (rule 26)
	Expr -> Expr . CMP Expr                             (rule 27)
	Expr -> Expr . '+' Expr                             (rule 28)
	Expr -> Expr . '-' Expr                             (rule 29)
	Expr -> Expr . '*' Expr                             (rule 30)
	Expr -> Expr . '/' Expr                             (rule 31)

	';'            shift, and enter state 85
	'&&'           shift, and enter state 86
	'||'           shift, and enter state 87
	'/'            shift, and enter state 88
	'+'            shift, and enter state 89
	'-'            shift, and enter state 90
	'*'            shift, and enter state 91
	'$'            shift, and enter state 92
	CMP            shift, and enter state 93
	%eof           accept


State 36

	Expr -> App .                                       (rule 32)
	App -> App . Primary                                (rule 33)

	nl             reduce using rule 32
	'()'           shift, and enter state 41
	'('            shift, and enter state 42
	')'            reduce using rule 32
	','            reduce using rule 32
	';'            reduce using rule 32
	'}'            reduce using rule 32
	'&&'           reduce using rule 32
	'||'           reduce using rule 32
	'/'            reduce using rule 32
	'+'            reduce using rule 32
	'-'            reduce using rule 32
	'*'            reduce using rule 32
	'$'            reduce using rule 32
	CMP            reduce using rule 32
	UPPER_ID       shift, and enter state 44
	LOWER_ID       shift, and enter state 9
	INT            shift, and enter state 45
	BOOL           shift, and enter state 46
	CHAR           shift, and enter state 47
	in             reduce using rule 32
	then           reduce using rule 32
	else           reduce using rule 32
	with           reduce using rule 32
	of             reduce using rule 32
	%eof           reduce using rule 32

	Primary        goto state 84
	ArbitraryProgVargoto state 38
	ProgVar        goto state 39
	Constructor    goto state 40

State 37

	App -> Primary .                                    (rule 36)

	nl             reduce using rule 36
	'()'           reduce using rule 36
	'('            reduce using rule 36
	')'            reduce using rule 36
	','            reduce using rule 36
	';'            reduce using rule 36
	'}'            reduce using rule 36
	'&&'           reduce using rule 36
	'||'           reduce using rule 36
	'/'            reduce using rule 36
	'+'            reduce using rule 36
	'-'            reduce using rule 36
	'*'            reduce using rule 36
	'$'            reduce using rule 36
	CMP            reduce using rule 36
	UPPER_ID       reduce using rule 36
	LOWER_ID       reduce using rule 36
	INT            reduce using rule 36
	BOOL           reduce using rule 36
	CHAR           reduce using rule 36
	in             reduce using rule 36
	then           reduce using rule 36
	else           reduce using rule 36
	with           reduce using rule 36
	of             reduce using rule 36
	%eof           reduce using rule 36

